[package]
name = "yolol-devices"
version = "0.2.3"
edition = "2018"
authors = ["alrianne"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
enum_dispatch = "0.3.7"
concat-idents = "1.1.3"
convert_case = "0.4.0"
strum = { version = "0.21", features = ["derive"] }
yaml-rust = {git = "https://github.com/wolfnether/yaml-rust"}