[package]
name = "yolol-devices"
version = "0.3.3"
edition = "2018"
authors = ["alrianne"]
description = "Starbase game's yolol devices library"
license-file = "LICENSE"
homepage = "https://github.com/wolfnether/yolol-devices"
repository = "https://github.com/wolfnether/yolol-devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
enum_dispatch = "0.3.7"
concat-idents = "1.1.3"
convert_case = "0.4.0"
